--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- mine css -->
   <link rel="stylesheet" href="css/style.css">
 
@@ -34,8 +37,8 @@
               <div class="collapse navbar-collapse justify-content-between fw-bold" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Giochi<span class="arrow-down"><img src="img/chevron-down-solid.svg" alt=""></span>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Giochi
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -50,8 +53,8 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Hardware<span class="arrow-down"><img src="img/chevron-down-solid.svg" alt=""></span>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Hardware
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -66,8 +69,8 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Servizi<span class="arrow-down"><img src="img/chevron-down-solid.svg" alt=""></span>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Servizi
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -82,8 +85,8 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      novit&abreve;<span class="arrow-down"><img src="img/chevron-down-solid.svg" alt=""></span>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      novit&abreve;
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -98,9 +101,8 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Fai acquisti<span class="arrow-down"><img src="img/chevron-down-solid.svg" alt=""></span>
-                    </a>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Fai acquisti
                     <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -114,8 +116,8 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Supporto<span class="arrow-down"><img src="img/chevron-down-solid.svg" alt=""></span>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Supporto
                     </a>
                     <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                       <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -134,8 +136,8 @@
                   <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          My PlayStation<span class="arrow-down"><img src="img/chevron-down-solid.svg" alt=""></span>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          My PlayStation
                         </a>
                         <ul class="dropdown-menu w-100 list-inline text-center border-0" aria-labelledby="navbarDropdownMenuLink">
                           <li class="list-inline-item"><a class="dropdown-item" href="#"><img src="img/play-menu-ico.png" alt=""></a>ps5</li>
@@ -144,9 +146,9 @@
                           <li>
                             <hr class="dropdown-divider">
                           </li>
-                          <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                          <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
-                          <li class="list-inline-item"><a class="dropdown-item" href="#">Separated link</a></li>
+                          <li class="list-inline-item text-uppercase"><a class="dropdown-item" href="#">Ps7</a></li>
+                          <li class="list-inline-item text-uppercase"><a class="dropdown-item" href="#">Ps7</a></li>
+                          <li class="list-inline-item text-uppercase"><a class="dropdown-item" href="#">Ps7</a></li>
                         </ul>
                       </li>
                     </ul>
