--- a/index.html
+++ b/index.html
@@ -185,7 +185,31 @@
     <!-- /game banner -->
 
     <!-- 6 cards -->
-    <section></section>
+    <section class="pt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-6 col-sm-4 col-lg-2 pb-4">
+            <img class="w-100 rounded-4" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 pb-4">
+            <img class="w-100 rounded-4" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 pb-4">
+            <img class="w-100 rounded-4" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 pb-4">
+            <img class="w-100 rounded-4" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 pb-4">
+            <img class="w-100 rounded-4" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 pb-5">
+            <img class="w-100 rounded-4" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+          </div>
+          
+        </div>
+      </div>
+    </section>
     <!-- /6 cards -->
 
     <!-- explore ps5 -->
