--- a/index.html
+++ b/index.html
@@ -213,21 +213,36 @@
     <!-- /6 cards -->
 
     <!-- explore ps5 -->
-    <section>
+    <section class="explore-ps5">
       <div class="container">
         <div class="row">
-          <div class="col-12">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora unde facere quis exercitationem inventore ea magnam illum dicta quo corporis aut incidunt adipisci vitae, quidem perferendis modi quas! Nemo, dolores?</div>
+          <div class="col-12 text-center">
+            <span class="text-uppercase fw-bold"><a href="" class="text-decoration-none">Play has no limits</a></span>
+            <h2 class="fs-1">Ecco la Playstation 5</h2>
+            <p class="fs-5 attract-buyers mb-5">Tuffati in nuove possibilit&aacute; di gioco completamente inaspettate</p>
+          </div>
         </div>
-        <div class="row">
-          <div class="col-12 col-md-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt quam quo culpa autem corrupti omnis voluptatum ex odit et. Alias nesciunt sequi unde cum commodi ad aliquam saepe fugiat. Nostrum.</div>
-          <div class="col-12 col-md-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt itaque eos, maiores rem reprehenderit dolore modi nulla. Numquam necessitatibus ea unde ipsum! Magni voluptatem nisi, obcaecati incidunt officia neque laudantium?</div>
+        <div class="row align-items-center">
+          <div class="col-12 col-md-6">
+            <h2 class="fs-1 pe-5">Console Playstation 5</h2>
+            <p class="fs-5 attract-buyers">Sperimenta la nuova generazione di incredibili giochi Playstation.</p>
+            <span><button type="button" class="btn btn-primary rounded-4">Maggiori informazioni</button></span>
+          </div>
+          <div class="col-12 col-md-6">
+            <img class="w-100" src="img/playstation-5-thumb.png" alt="">
+          </div>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-4 col-md-2">ciao</div>
-          <div class="col-4 col-md-2">ciao</div>
-          <div class="col-4 col-md-2">ciao</div>
-          <div class="col-4 col-md-2">ciao</div>
-          <div class="col-4 col-md-2">ciao</div>
+        <div class="row gadget-ps5">
+          <div class="col-4 col-md-2 ">
+            <img class="w-100" src="img/playstation-5-thumb.png" alt="ps5"></div>
+          <div class="col-4 col-md-2 ">
+            <img class="w-100" src="img/joypad-thumb.png" alt="joystick"></div>
+          <div class="col-4 col-md-2 ">
+            <img class="w-100" src="img/headset-thumb.png" alt="headphones"></div>
+          <div class="col-4 col-md-2 ">
+            <img class="w-100" src="img/remote-thumb.png" alt="console controller"></div>
+          <div class="col-4 col-md-2 ">
+            <img class="w-100" src="img/camera-thumb.jpg" alt="webcam"></div>
         </div>
       </div>
     </section>
