--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-  <!-- font awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- mine css -->
   <link rel="stylesheet" href="css/style.css">
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <title>Sony</title>
 </head>
@@ -255,7 +254,7 @@
           <div class="col-12">
             <img class="game-logo it-takes-two pb-2 pt-5" src="img/it-takes-two-logo.png" alt="reurnal-logo">
             <h2 class="pb-4">Un'avventura cooperativa selvaggia ti attende</h2>
-            <p class="pb-3 game-desc fw-bold">Trova un amico e partite insieme per l'avventura pi&uacute; folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
+            <p class="pb-3 game-desc">Trova un amico e partite insieme per l'avventura pi&uacute; folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
             <button type="button" class="btn btn-danger rounded-pill mb-5 fw-bold">Acquista ora</button>
           </div>
         </div>
@@ -264,7 +263,64 @@
     <!-- /game banner -->
 
     <!-- 12 cards -->
-    <section></section>
+    <section class="cards-12">
+      <div class="container">
+        <div class="row">
+          <div class="col-11">
+            <h2 class="pt-5 fs1">Nuove uscite</h2>
+            <p class="fs-2">Giochi icredibili per <span class="text-uppercase">ps4</span> e <span class="text-uppercase">ps5</span> disponibili ora</p>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 mb-5">
+            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawk" class="w-100 rounded-4 mb-3">
+            <h3 class="">Tony <span class="trademark">Hawk's</span> <span class="trademark">Pro Skater</span> 1 + 2</h3>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 mb-5">
+            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crashband" class="w-100 rounded-4 mb-3">
+            <h3 class="">Crash Bandicoot 4: It's About Time</h3>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2">
+            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawk" class="w-100 rounded-4 mb-3">
+            <h3 class="">Tony <span class="trademark">Hawk's</span> <span class="trademark">Pro Skater</span> 1 + 2</h3>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 mb-5">
+            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crashband" class="w-100 rounded-4 mb-3">
+            <h3 class="">Crash Bandicoot 4: It's About Time</h3>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 mb-5">
+            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawk" class="w-100 rounded-4 mb-3">
+            <h3 class="">Tony <span class="trademark">Hawk's</span> <span class="trademark">Pro Skater</span> 1 + 2</h3>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 mb-5">
+            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crashband" class="w-100 rounded-4 mb-3">
+            <h3 class="">Crash Bandicoot 4: It's About Time</h3>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 mb-5">
+            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawk" class="w-100 rounded-4 mb-3">
+            <h3 class="">Tony <span class="trademark">Hawk's</span> <span class="trademark">Pro Skater</span> 1 + 2</h3>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 mb-5">
+            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crashband" class="w-100 rounded-4 mb-3">
+            <h3 class="">Crash Bandicoot 4: It's About Time</h3>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 mb-5">
+            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawk" class="w-100 rounded-4 mb-3">
+            <h3 class="">Tony <span class="trademark">Hawk's</span> <span class="trademark">Pro Skater</span> 1 + 2</h3>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 mb-5">
+            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crashband" class="w-100 rounded-4 mb-3">
+            <h3 class="">Crash Bandicoot 4: It's About Time</h3>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 mb-5">
+            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawk" class="w-100 rounded-4 mb-3">
+            <h3 class="">Tony <span class="trademark">Hawk's</span> <span class="trademark">Pro Skater</span> 1 + 2</h3>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2 mb-5">
+            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crashband" class="w-100 rounded-4 mb-3">
+            <h3 class="">Crash Bandicoot 4: It's About Time</h3>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- /12 cards -->
 
     <!-- explore ps4 -->
