--- a/index.html
+++ b/index.html
@@ -448,14 +448,14 @@
 
   <!-- footer -->
   <footer>
-    <section class="footer-navbar pt-5">
+    <section class="footer-navbar pt-6">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-lg-6">
-            <img src="img/ps-footer.svg" alt="logo playstation" class="w-25">
+          <div class="col-12 col-lg-7">
+            <img src="img/ps-footer.svg" alt="logo playstation">
             <p class="mt-4 mb-5"><span class="me-2"><i class="fas fa-globe"></i></span>Country / Region: Italy</p>
           </div>
-          <div class="col-12 col-lg-6 mb-5">
+          <div class="col-12 col-lg-5 mb-5">
             <div class="row">
               <col-12 class="col-md-4">
                 <ul class="footer-link-list">
@@ -491,7 +491,16 @@
         </div>
       </div>
     </section>
-    <section class="copyright"></section>
+    <section class="copyright">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-7 mb-5r">
+            <img src="img/sie-logo.svg" alt="sonysie" class="w-25 footer-last-logo mb-3">
+            <p>Website <span>2021</span> Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. <span class="last-link"><a href=""> Maggiori info</a></span></p>
+          </div>
+        </div>
+      </div>
+    </section>
   </footer>
   <!-- javascript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
